# gh_api_assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
gh_api_assistant/: main.py  scrape.py
tests/: test_chain.py
